# ClangTetris

./: .gitignore  CMakeLists.txt  README.md
src/: macros.h  main.c
src/board/: board.c  board.h
src/color/: color.c  color.h
src/shape/: alloc.c  collision.c  enums.h  shape.c  shape.h  update.c
src/shape/I_shape/: I_rotate.c  I_shape.c  I_shape.h
src/shape/K_shape/: K_rotate.c  K_shape.c  K_shape.h
src/shape/L_shape/: L_rotate.c  L_shape.c  L_shape.h
src/shape/O_shape/: O_shape.c  O_shape.h
src/shape/S_shape/: S_rotate.c  S_shape.c  S_shape.h
src/util/: util.c  util.h
src/window/: quit.c  window.c  window.h
src/window/event_loop/: loop.c  loop.h  render.c
src/window/event_loop/controller/: controller.c  controller.h
